# CharityChain

./: .gitignore
Backend/: package-lock.json  package.json  server.js
Backend/controllers/: auth.controller.js  campaign.controller.js
Backend/db/: connectDb.js
Backend/middleware/: protectRoute.js
Backend/models/: campaign.model.js  user.model.js
Backend/routes/: auth.routes.js  campaign.routes.js
Backend/utils/: generateToken.js
Frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
Frontend/src/: Airdrop.tsx  App.tsx  main.tsx
Frontend/src/components/: Navbar.tsx
Frontend/src/context/: AuthContext.tsx
Frontend/src/hooks/: useCreate.js  useGetCampaigns.js  useLogin.js  useLogout.js  useSignup.js
Frontend/src/pages/: Campaign.tsx  Dashboard.tsx  Home.tsx  Login.tsx  SignUp.tsx
programs/donation_program/: Cargo.toml
programs/donation_program/src/: lib.rs
